@@ -7,7 +7,7 @@ DESCRIPTION
 
 SEE ALSO
     Wikibase::Datatype::Print::Form
-        TODO
+        Wikibase form pretty print helpers.
 
     Wikibase::Datatype::Print::Item
         TODO
